Update and rename high-tatras.html to index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h3>&#127956; Video from High Tatras &#127956;</h3>
     <iframe width="800" height="450" src="https://www.youtube.com/embed/S4lLun5s2ts?autoplay=1&mute=1&start=77"></iframe>
     <br><br>
-    <button><a href="rysy-hike.html">→Click if you want to continue reading→</a></button>
+    <button><a href="index_2.html">→Click if you want to continue reading→</a></button>
 
 
 </body>
