Update and rename rysy-hike.html to index_2.html

--- a/index_2.html
+++ b/index_2.html
@@ -33,9 +33,9 @@ body {
     <p>А нагородою за все це стали краєвиди, які відкрилися з вершини. Переді мною постала панорама Високих Татр у всій своїй зимовій красі. Сонце відбивалося від засніжених вершин, низини були прозорі й ясні, а горизонт здавався безмежним. Це було щось більше, ніж просто природа — це була мить абсолютної тиші, момент, коли розумієш, що все залишилося біля підніжжя гори разом із проблемами та усім іншим світом. У той момент зі мною залишилося лише почуття того, що зусилля та всі випробування були варті того. Я стояв на Рисах, на даху Польщі та одній з найвищих точок Словаччини, і відчував себе частиною цього величного світу з маленькими людьми та мріями.</p>
         
         
-    <button><a href="high-tatras.html">←Click if you want to go back←</a></button>
+    <button><a href="index.html">←Click if you want to go back←</a></button>
     <br><br><br><br>
-    <button><a href="tatry-info.html">→Click if you want to continue reading→</a></button>
+    <button><a href="index_3.html">→Click if you want to continue reading→</a></button>
 </div>
 </body>
 </html>
