Update and rename tatry-info.html to index_3.html

--- a/index_3.html
+++ b/index_3.html
@@ -71,7 +71,7 @@
         </details>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-        <button><a href="rysy-hike.html">←Click if you want to go back←</a></button>
+        <button><a href="index_2.html">←Click if you want to go back←</a></button>
 </body>
 
 </html>
